[tool.poetry]
name = "gumballmachine"
version = "0.1.0"
description = "A \"museum\" of fun LLM prompts."
authors = ["Thomas Lawton <thomas.lawton@ratmail.cc>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
pytest = "^7.4.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
